force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>Custom clone of the standard Contract object.</description>
    <label>契約管理</label>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>