force-app/main/default/objects/Contract__c/fields/AccountCount__c.field-meta.xml
<CustomField>
    <fullName>AccountCount__c</fullName>
    <label>アカウント数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>