force-app/main/default/objects/Contract__c/fields/AnnualBillingMonthType__c.field-meta.xml
<CustomField>
    <fullName>AnnualBillingMonthType__c</fullName>
    <label>年払い請求月区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>利用開始月</fullName><default>true</default><label>利用開始月</label></value>
            <value><fullName>利用開始前月</fullName><default>false</default><label>利用開始前月</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>