force-app/main/default/objects/Contract__c/fields/AutoCreatedFromFreee__c.field-meta.xml
<CustomField>
    <fullName>AutoCreatedFromFreee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freee取込自動作成</label>
    <type>Checkbox</type>
</CustomField>