force-app/main/default/objects/Contract__c/fields/BillingControlSource__c.field-meta.xml
<CustomField>
    <fullName>BillingControlSource__c</fullName>
    <description>更新請求を作成するシステム。Freeeの場合はSalesforce更新請求バッチの対象外。</description>
    <label>請求管理元</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Freee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>