force-app/main/default/objects/Contract__c/fields/CheckStatus__c.field-meta.xml
<CustomField>
    <fullName>CheckStatus__c</fullName>
    <label>確認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未送</fullName>
            </value>
            <value>
                <fullName>送付</fullName>
            </value>
            <value>
                <fullName>入金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>