force-app/main/default/objects/Contract__c/fields/CompanySigned__c.field-meta.xml
<CustomField>
    <fullName>CompanySigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>署名者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CompanySignedCustomContracts</relationshipName>
    <type>Lookup</type>
</CustomField>