force-app/main/default/objects/Contract__c/fields/ContractNature__c.field-meta.xml
<CustomField>
    <fullName>ContractNature__c</fullName>
    <label>契約区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
                <default>true</default>
                <label>継続契約</label>
            </value>
            <value>
                <fullName>OneTime</fullName>
                <label>単発契約</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>