force-app/main/default/objects/Contract__c/fields/CreationSource__c.field-meta.xml
<CustomField>
    <fullName>CreationSource__c</fullName>
    <label>作成元</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>営業受注</label>
            </value>
            <value>
                <fullName>FreeeImport</fullName>
                <label>Freee請求取込</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>