force-app/main/default/objects/Contract__c/fields/CustomerSigned__c.field-meta.xml
<CustomField>
    <fullName>CustomerSigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>クライアント担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>契約管理</relationshipLabel>
    <relationshipName>CustomerSignedCustomContracts</relationshipName>
    <type>Lookup</type>
</CustomField>