force-app/main/default/objects/Contract__c/fields/CustomerSignedDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignedDate__c</fullName>
    <label>クライアント署名日</label>
    <type>Date</type>
</CustomField>