force-app/main/default/objects/Contract__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>イベント</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>契約</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>