force-app/main/default/objects/Contract__c/fields/ExpectedDuration__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDuration__c</fullName>
    <defaultValue>12</defaultValue>
    <label>継続予定期間(月)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>