force-app/main/default/objects/Contract__c/fields/NextInvoiceCreationDate__c.field-meta.xml
<CustomField>
    <fullName>NextInvoiceCreationDate__c</fullName>
    <label>次回請求書作成予定日</label>
    <type>Date</type>
</CustomField>