force-app/main/default/objects/Contract__c/fields/Oppotunity__c.field-meta.xml
<CustomField>
    <fullName>Oppotunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親取引</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>contract</relationshipName>
    <type>Lookup</type>
</CustomField>