force-app/main/default/objects/Contract__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>支払方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
                <label>請求書</label>
            </value>
            <value>
                <fullName>CreditCard</fullName>
                <label>クレジットカード</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>