force-app/main/default/objects/Contract__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>プラン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Pro＋</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>