force-app/main/default/objects/Contract__c/fields/PlanCategory__c.field-meta.xml
<CustomField>
    <fullName>PlanCategory__c</fullName>
    <label>プランカテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Basic</fullName><default>false</default><label>Basic</label></value>
            <value><fullName>Pro</fullName><default>false</default><label>Pro</label></value>
            <value><fullName>Enterprise</fullName><default>false</default><label>Enterprise</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>