force-app/main/default/objects/Contract__c/fields/PreviousContract__c.field-meta.xml
<CustomField>
    <fullName>PreviousContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>旧契約</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>切替後契約</relationshipLabel>
    <relationshipName>RenewedContracts</relationshipName>
    <type>Lookup</type>
</CustomField>