force-app/main/default/objects/Contract__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>商品カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>knock knock AI</fullName>
            </value>
            <value>
                <fullName>Rendery</fullName>
            </value>
            <value>
                <fullName>VISIOAL</fullName>
            </value>
            <value>
                <fullName>受託開発</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>