force-app/main/default/objects/Contract__c/fields/RenewalConfirmationStatus__c.field-meta.xml
<CustomField>
    <fullName>RenewalConfirmationStatus__c</fullName>
    <label>更新確認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未確認</fullName>
                <default>true</default>
                <label>未確認</label>
            </value>
            <value>
                <fullName>更新予定</fullName>
            </value>
            <value>
                <fullName>更新停止</fullName>
            </value>
            <value>
                <fullName>条件変更あり</fullName>
            </value>
            <value>
                <fullName>確認不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>