force-app/main/default/objects/Contract__c/fields/RenewalStop__c.field-meta.xml
<CustomField>
    <fullName>RenewalStop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新停止</label>
    <type>Checkbox</type>
</CustomField>