force-app/main/default/objects/Contract__c/fields/SourceQuotation__c.field-meta.xml
<CustomField>
    <fullName>SourceQuotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元見積</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>契約</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>