force-app/main/default/objects/Contract__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>