force-app/main/default/objects/Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>■ 契約ステータス

■ ① 進行系（契約成立まで）
順序	表示名	API名	説明
1	ドラフト	Draft	契約書作成中
2	交渉中	Negotiating	条件調整中
3	承認中	InApproval	社内承認中
4	署名待ち	AwaitingSignature	顧客署名待ち
------------------------------------------------
■ ② 成立後（アクティブ）
順序	表示名	API名	説明
5	有効	Activated	契約開始済
------------------------------------------------
■ ③ SaaS特有
順序	表示名	API名	説明
6	更新予定	PendingRenewal	更新対象
7	更新済	Renewed	更新完了
------------------------------------------------
■ ④ 終了系
順序	表示名	API名	説明
8	契約終了	Expired	期間満了
9	解約	Terminated	途中解約
10	キャンセル	Cancelled	契約前キャンセル
11	契約拒否	Rejected	承認NG</description>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>ドラフト</label>
            </value>
            <value>
                <fullName>Negotiating</fullName>
                <label>交渉中</label>
            </value>
            <value>
                <fullName>InApproval</fullName>
                <label>承認中</label>
            </value>
            <value>
                <fullName>AwaitingSignature</fullName>
                <label>署名待ち</label>
            </value>
            <value>
                <fullName>Activated</fullName>
                <label>有効</label>
            </value>
            <value>
                <fullName>更新予定</fullName>
            </value>
            <value>
                <fullName>更新済</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
                <label>契約終了</label>
            </value>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>契約拒否</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>キャンセル</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>