force-app/main/default/objects/Contract__c/listViews/ActiveCustomDevelopmentContracts.listView-meta.xml
<ListView>
    <fullName>ActiveCustomDevelopmentContracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>PlanCategory__c</columns>
    <columns>AccountCount__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>MRR__c</columns>
    <columns>ARR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>ProductCategory__c</field>
        <operation>equals</operation>
        <value>受託開発</value>
    </filters>
    <label>受託開発 有効契約</label>
</ListView>