force-app/main/default/objects/Contract__c/listViews/ActiveRenderySmbContracts.listView-meta.xml
<ListView>
    <fullName>ActiveRenderySmbContracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>PlanCategory__c</columns>
    <columns>AccountCount__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>MRR__c</columns>
    <columns>ARR__c</columns>
    <filterScope>Everything</filterScope>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>ProductCategory__c</field>
        <operation>equals</operation>
        <value>Rendery</value>
    </filters>
    <filters>
        <field>PlanCategory__c</field>
        <operation>equals</operation>
        <value>Basic</value>
    </filters>
    <filters>
        <field>PlanCategory__c</field>
        <operation>equals</operation>
        <value>Pro</value>
    </filters>
    <label>Rendery SMB 有効契約</label>
</ListView>