force-app/main/default/objects/Contract__c/listViews/CreditContract.listView-meta.xml
<ListView>
    <fullName>CreditContract</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Plan__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Payment__c</columns>
    <filterScope>Mine</filterScope>
    <label>クレジットカード契約</label>
</ListView>